# nixos-config-manager

./: .editorconfig  .gitignore  LICENSE  NIXPKGS_SUBMISSION.md  README.md  build-package.nix  build.sh  default.nix  flake.nix  package.nix  result  shell.nix
.opencode/plan/: PACKAGE_SEARCH_PLAN.md
include/core/: configEditor.h  configParser.h  fileSyntaxDetector.h  moduleResolver.h  moduleSelector.h  packageInserter.h  packageSearcher.h  rebuildManager.h
include/models/: installTarget.h
include/ui/: tui.h
src/: CMakeLists.txt  main.cpp
src/core/: configEditor.cpp  configEditor.h  configParser.cpp  configParser.h  fileSyntaxDetector.cpp  fileSyntaxDetector.h  moduleResolver.cpp  moduleResolver.h  moduleSelector.cpp  moduleSelector.h  packageInserter.cpp  packageInserter.h  packageSearcher.cpp  packageSearcher.h  rebuildManager.cpp
src/models/: moduleInfo.h  packageEntry.h  searchResult.h
src/ui/: tui.cpp  tui.h
